--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@ html,body{
 margin:0;
 padding:0;
 font-family: 'Open Sans', sans-serif;
-background: #fff url(../images/bg.jpg) center top no-repeat;
+background: #fafafa center top no-repeat;
 background-size: cover;
 height: 100%;
 width: 100%;
@@ -41,7 +41,7 @@ float: left;
 
 h1{
 font-family: 'Open Sans', sans-serif;
-color: #fff;
+color: #232323;
 text-align: center;
 font-size: 50px;
 font-weight: 300;
@@ -58,7 +58,7 @@ h2{
 	text-align: center;
 	font-weight: 300;
 	font-size: 20px;
-		color: #ffffff;
+		color: #232323;
 
 }
 
@@ -77,12 +77,12 @@ margin: 0 auto;
 h3{
 font-size: 28px;
 font-weight: 600;
-color: #ffffff;
+color: #232323;
 }
 
 .information p{
 font-size: 16px;
-color: #ffffff;
+color: #232323;
 display: block;
 }
 
@@ -100,13 +100,13 @@ border: none;
 font-style: italic;
 font-family: 'Lato', sans-serif;
 font-size: 16px;
-color: #ffffff;
+color: #232323;
 padding: 15px;
 margin-bottom: 15px;
 outline: none;
 }
 	.field:focus {
-	border: 1px solid #ffffff;
+	border: 1px solid #232323;
 	padding: 14px;
 	}
 @media only screen and (max-width: 480px)  {
@@ -129,7 +129,7 @@ position: absolute;
 right: 15px;
 top: 13px;
 padding: 3px 10px;
--webkit-border-radius: 30px;-moz-border-radius: 30px;border-radius: 30px;
+-webkit-border-radius: 10px;-moz-border-radius: 10px;border-radius: 10px;
 background: #ffffff;
 border: none;
 font-family: 'Lato', sans-serif;
