--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,10 +93,10 @@ margin-top: 20px;
 }
 
 .field{
-background: url(../images/field.png) repeat;
+background: #fafafa;
 width: 448px;
 -webkit-border-radius: 30px;-moz-border-radius: 30px;border-radius: 30px;
-border: none;
+border: 1px solid;
 font-style: italic;
 font-family: 'Lato', sans-serif;
 font-size: 16px;
@@ -107,7 +107,7 @@ outline: none;
 }
 	.field:focus {
 	border: 1px solid #232323;
-	padding: 14px;
+	padding: 15px;
 	}
 @media only screen and (max-width: 480px)  {
 	.information{
@@ -126,12 +126,12 @@ outline: none;
 
 .submit{
 position: absolute;
-right: 15px;
-top: 13px;
-padding: 3px 10px;
--webkit-border-radius: 10px;-moz-border-radius: 10px;border-radius: 10px;
-background: #ffffff;
-border: none;
+right: 7px;
+top: 8px;
+padding: 8px 30px;
+-webkit-border-radius: 30px;-moz-border-radius: 30px;border-radius: 30px;
+background: #fafafa;
+border: 1px solid;
 font-family: 'Lato', sans-serif;
 font-size: 14px;
 font-weight: bold;
